--- a/main.html
+++ b/main.html
@@ -4,12 +4,41 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-</head>
+ <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
 
+        /* Centering the box on the page */
+        .box {
+            width: 200px;
+            height: 200px;
+            background-color: lightblue;
+            border: 2px solid black;
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        /* Centering the text inside the box */
+        .box p {
+            color: purple;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            margin: 0;
+        }
+    </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+    <div class="box">
+        <p>This is center.</p>
+    </div>
 
 </body>
 
